# roomie-match

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_pydantic.py
docs/: api-guide.md  database.md
scripts/: seed_sample_data.py
src/app/: __init__.py  main.py
src/app/api/v1/: router.py
src/app/core/: config.py  security.py
src/app/database/: model_registry.py  session.py
src/app/features/: __init__.py
src/app/features/chatbot/: __init__.py  service.py
src/app/features/matching/: __init__.py
src/app/features/rental_requests/: __init__.py
src/app/features/rooms/: __init__.py
src/app/features/users/: __init__.py  dependencies.py
src/app/models/: __init__.py
src/app/models/chatbot/: chat_message.py  chat_session.py
src/app/models/matching/: __init__.py  match.py  preference.py
src/app/models/rental_requests/: __init__.py  rental_history.py
src/app/models/rooms/: __init__.py  review.py  room.py  room_amenity.py  room_image.py
src/migrations/: env.py
src/migrations/versions/: 001_initial_roles_accounts.py  002_add_rooms_and_favorites.py  003_add_images_amenities_avatar.py  003_add_profiles_table.py  004_add_profiles_table.py  004_add_rental_history_table.py  004_create_reviews_table.py  005_add_packages.py  005_add_rental_history_table.py  006_create_reviews_table.py  007_add_packages.py  008_add_user_preferences.py  009_add_chatbot_tables.py  010_add_suggested_accounts.py  26abd0702ed0_add_suggested_accounts.py  a9aec0537fcc_add_chatbot_tables.py
src/tests/: conftest.py
(+113 files in other folders)
